tests/algorithms/x/Kotlin/other/linear_congruential_generator.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/algorithms/x/Kotlin/other/linear_congruential_generator.kt:28:69: error: type mismatch: inferred type is Long but Int was expected
var lcg: LCG = make_lcg(1664525, 1013904223, (4294967296L.toInt()), _now())
                                                                    ^
